Improve main layout and remove unused styling

--- a/app/src/popup/Popup.css
+++ b/app/src/popup/Popup.css
@@ -1,13 +1,12 @@
-html, body {
-  width: 300px;
-}
 .popup-view {
   border: 5px solid #00e080;
   background-color: #F2F2F2;
+  align-content: space-around;
   padding: 2px;
 }
 .view-change-button {
   display: flex;
+  padding: 5px;
   width: 50px;
   height: 30px;
   flex-direction: row;
@@ -22,7 +21,8 @@ html, body {
 .duration-header {
   align-content: center;
   justify-content: center;
-  height: 25px;
+  padding: 5px;
+  height: 40px;
 }
 .duration-header-text {
   font-family: Georgia, 'Times New Roman', Times, serif;
