Apply extension theme color to the scrollbar

--- a/app/src/popup/Popup.css
+++ b/app/src/popup/Popup.css
@@ -70,7 +70,7 @@
   overflow-x: hidden;
   list-style: none;
   scrollbar-width: thin;
-  scrollbar-color: #FC4D17;
+  scrollbar-color: #FC4D17 transparent;
 }
 .expanded-view-list-container {
   max-width: 500px;
