Expaned view - layout and behavior (#13)
* Implement initial ExpandedView component

* Provide list item with unique key

* Mock the localStorage for components tests

* Utilize ExpandedView in Popup

* Test ExpandedView agains correct layout and structure

* Simplify the Tile component to render details only

* Style the Expanded View component and its layout

* Apply extension theme color to the scrollbar

* Move time common formatting functions to utils

--- a/app/src/popup/Popup.css
+++ b/app/src/popup/Popup.css
@@ -64,3 +64,50 @@
   justify-content: center;
   align-items: center;
 }
+.expanded-view-list {
+  max-height: 400px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  list-style: none;
+  scrollbar-width: thin;
+  scrollbar-color: #FC4D17 transparent;
+}
+.expanded-view-list-container {
+  max-width: 500px;
+  padding: 5px;
+  overflow: hidden;
+  scrollbar-color: #FC4D17;
+}
+.expanded-view-tile-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  padding: 5px;
+  height: 45px;
+}
+.expanded-view-icon-container {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+.expanded-view-icon {
+  width: 24px;
+  height: 24px;
+}
+.expanded-view-domain-container {
+  width: 300px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+.expanded-view-domain-text {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: medium;
+}
+.expanded-view-time-spent-text-container {
+  width: 100px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+.expanded-view-time-spent-text {
+  font-size: medium;
+  font-weight: bold;
+}
